--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bull": "^4.11.3",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
