--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "bull": "^4.11.3",
         "cheerio": "^1.0.0-rc.12",
         "concurrently": "^8.2.2",
+        "dayjs": "^1.11.10",
         "eslint": "8.46.0",
         "eslint-config-next": "13.4.13",
         "ioredis": "^5.3.2",
         "mongodb": "^5.7.0",
-        "next": "13.4.13",
-        "postcss": "8.4.27",
+        "next": "^13.5.6",
+        "postcss": "^8.4.32",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-query": "^3.39.3",
