--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
         "react-dom": "18.2.0",
         "react-query": "^3.39.3",
         "tailwindcss": "3.3.3"
+    },
+    "devDependencies": {
+        "@types/node": "^20.10.5",
+        "@types/react": "^18.2.45",
+        "typescript": "^5.3.3"
     }
 }
