--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-query": "^3.39.3",
+        "react-tooltip": "^5.25.1",
         "tailwindcss": "3.3.3"
     },
     "devDependencies": {
